--- a/public/app.sfondi.html
+++ b/public/app.sfondi.html
@@ -9,6 +9,7 @@
             text-align: center;
             font-family: Arial, sans-serif;
             transition: background 0.5s ease-in-out;
+            cursor:none;
         }
         .container {
             margin-top: 20px;
